2017-10-30  Michael Saboff  <msaboff@apple.com>

        Eliminate Basic compiler test from RexBench
        https://bugs.webkit.org/show_bug.cgi?id=179025

        Reviewed by Saam Barati.

        * RexBench/Basic: Removed.
        * RexBench/Basic/ast.js: Removed.
        * RexBench/Basic/basic.js: Removed.
        * RexBench/Basic/benchmark.js: Removed.
        * RexBench/Basic/caseless_map.js: Removed.
        * RexBench/Basic/lexer.js: Removed.
        * RexBench/Basic/number.js: Removed.
        * RexBench/Basic/parser.js: Removed.
        * RexBench/Basic/random.js: Removed.
        * RexBench/Basic/state.js: Removed.
        * RexBench/Basic/stress-test.js: Removed.
        * RexBench/Basic/util.js: Removed.
        * RexBench/basic_benchmark.js: Removed.
        * RexBench/about.html:
        * RexBench/cli.js:
        * RexBench/glue.js:
        * RexBench/index.html:

2017-10-25  Robin Morisset  <rmorisset@apple.com>

        Support the TailBench9000 benchmark in run-jsc-benchmarks
        https://bugs.webkit.org/show_bug.cgi?id=178451

        Reviewed by Saam Barati.

        The separation between the definition of the benchmarks (in merge-sort.js and n-body.js) and their loops (in *-run.js)
        was causing trouble since the load of the js files only succeeded from the same directory. So I chose to merge them, following
        the example of the other benchmarks.

        * TailBench9000/merge-sort-run.js: Removed.
        * TailBench9000/merge-sort.js:
        * TailBench9000/n-body-run.js: Removed.
        * TailBench9000/n-body.js:

2017-10-19  Michael Catanzaro  <mcatanzaro@igalia.com>

        -Wsign-compare triggered by MallocBench
        https://bugs.webkit.org/show_bug.cgi?id=178544

        Reviewed by Ryosuke Niwa.

        * MallocBench/MallocBench/Interpreter.cpp:
        (Interpreter::Interpreter):

2017-10-07  Yusuke Suzuki  <utatane.tea@gmail.com>

        Unreviewed, build fix for MallocBench in Linux 32bit