@@ -30,6 +30,8 @@
             <svg class="logo"><use xlink:href="resources/runner/logo.svg#root"></svg>
             <div class="body">
                 <p>MotionMark is a graphics benchmark that measures a browser’s capability to animate complex scenes at a target frame rate.</p>
+
+                <p><a href="about.html">More details</a> about the benchmark are available. Bigger scores are better.</p>
                 <p>For accurate results, please take your browser window full screen, or rotate your device to landscape orientation.</p>
                 <p class="portrait-orientation-check"><b>Please rotate your device.</b></p>
                 <button class="landscape-orientation-check" onclick="benchmarkController.startBenchmark()">Run Benchmark</button>
