@@ -1,3 +1,14 @@
+2017-11-01  Jon Lee  <jonlee@apple.com>
+
+        Add about page for MotionMark
+        https://bugs.webkit.org/show_bug.cgi?id=179152
+
+        Reviewed by Ryosuke Niwa.
+
+        * MotionMark/about.html: Added.
+        * MotionMark/index.html:
+        * MotionMark/resources/runner/motionmark.css:
+
 2017-10-30  Michael Saboff  <msaboff@apple.com>
 
         Eliminate Basic compiler test from RexBench
